Add custom condition JS + issue fixes

--- a/Samples/Advanced custom field/App_Plugins/FormEditor/editor/fields/my.range.html
+++ b/Samples/Advanced custom field/App_Plugins/FormEditor/editor/fields/my.range.html
@@ -1,5 +1,6 @@
 <!--
   this is the editor that will be used to configure our field.
+  our field configuration is passed to the editor in the property: dialogData.field.
 -->
 <div class="umb-panel form-editor-edit-field" ng-controller="FormEditor.Editor.FieldController">
   <div class="umb-panel-body no-header with-footer umb-scrollable">
