--- a/Source/Umbraco/Plugin/editor/fields/core.textarea.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.textarea.html
@@ -6,6 +6,7 @@
 
         <div class="umb-pane">
           <form-editor-field-basics></form-editor-field-basics>
+          <form-editor-field-placeholder></form-editor-field-placeholder>
 
           <label class="control-label" for="maxLength">
             <form-editor-localize key="edit.maxLength">Max length</form-editor-localize>
