--- a/Source/Umbraco/Plugin/editor/fields/core.url.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.url.html
@@ -6,6 +6,7 @@
 
         <div class="umb-pane">
           <form-editor-field-basics></form-editor-field-basics>
+          <form-editor-field-placeholder></form-editor-field-placeholder>
           <form-editor-field-mandatory></form-editor-field-mandatory>
           <form-editor-field-error-message></form-editor-field-error-message>
         </div>
