--- a/Source/Umbraco/Plugin/editor/fields/core.email.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.email.html
@@ -6,6 +6,7 @@
 
         <div class="umb-pane">
           <form-editor-field-basics></form-editor-field-basics>
+          <form-editor-field-placeholder></form-editor-field-placeholder>
 
           <label class="control-label" for="multiple">
             <input type="checkbox" id="multiple" ng-model="dialogData.field.multiple" />
