--- a/Source/Umbraco/Plugin/editor/directives.field.html
+++ b/Source/Umbraco/Plugin/editor/directives.field.html
@@ -72,7 +72,7 @@
       </div>
     </div>
     <i class="icon icon-add dimmed" ng-click="addFieldValue()">
-      <span class="menu-label" form-editor-localize key="edit.options.add" default-value="Add an option" />
+      <small form-editor-localize key="edit.options.add" default-value="Add an option" />
     </i>
   </div>
 </script>
