Make the receipt message text area a little bigger

--- a/Source/Umbraco/Plugin/editor/form.html
+++ b/Source/Umbraco/Plugin/editor/form.html
@@ -222,7 +222,7 @@
       <label class="control-label" for="emailConfirmationFromAddress" form-editor-localize key="receipt.message.body">
         Text
       </label>
-      <textarea class="umb-editor" id="receiptBody" ng-model="model.value.receiptBody"></textarea>
+      <textarea class="umb-editor" id="receiptBody" ng-model="model.value.receiptBody" rows="5"></textarea>
     </div>
   </div>
 </div>
